[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/MainMenu/CustomizeBike.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/SF Distant Galaxy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/MainMenu/OptionsMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[node name="OptionsMenu" instance=ExtResource( 1 )]
script = ExtResource( 3 )
mat = null

[node name="Label" parent="Panel" index="0"]
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="VBoxContainer" parent="Panel" index="1"]
margin_top = 77.0
margin_bottom = 335.0

[node name="Label" parent="Panel/VBoxContainer/HBoxContainer" index="0"]
margin_right = 138.0
text = "MASTER"

[node name="RedSlider" parent="Panel/VBoxContainer/HBoxContainer" index="1"]
margin_left = 148.0
margin_right = 248.0
rect_min_size = Vector2( 100, 50 )
max_value = 80.0
value = 71.0

[node name="Label" parent="Panel/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 98.0
text = "music"

[node name="GreenSlider" parent="Panel/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 108.0
margin_right = 248.0
rect_min_size = Vector2( 140, 50 )
max_value = 71.0
value = 71.0

[node name="Label" parent="Panel/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 68.0
text = "SFX"

[node name="BlueSlider" parent="Panel/VBoxContainer/HBoxContainer3" index="1"]
margin_left = 78.0
margin_right = 248.0
rect_min_size = Vector2( 170, 50 )
max_value = 80.0
value = 71.0
